update some automatically generated text

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Uwpce-pythoncert.github.io</title>
+    <title>UW PCE : Python Certificate</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/UWPCE-PythonCert">View on GitHub</a>
 
-          <h1 id="project_title">Uwpce-pythoncert.github.io</h1>
-          <h2 id="project_tagline">Project pages for the University of Washington Professional and Continuing Education Python Certification Program</h2>
+          <h1 id="project_title">UW PCE - Python Certificate</h1>
+          <h2 id="project_tagline">The University of Washington Professional and Continuing Education Python Certification Program.</h2>
 
         </header>
     </div>
