fix up index to have a bit more information, plus some places to hang new documentation

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
           <a id="forkme_banner" href="https://github.com/UWPCE-PythonCert">View on GitHub</a>
 
           <h1 id="project_title">UW PCE - Python Certificate</h1>
-          <h2 id="project_tagline">The University of Washington Professional and Continuing Education Python Certification Program.</h2>
+
+          <h2 id="project_tagline">The University of Washington Professional
+          and Continuing Education Python Certification Program.</h2>
 
         </header>
     </div>
@@ -28,11 +30,89 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>
-<a name="uwpce-python-certification-program-project" class="anchor" href="#uwpce-python-certification-program-project"><span class="octicon octicon-link"></span></a>UWPCE Python Certification Program Project</h1>
+          <a name="uwpce-python-certification-program-project" class="anchor" href="#uwpce-python-certification-program-project"><span class="octicon octicon-link"></span></a>
+          Professional Python Training
+        </h1>
 
-<p>Welcome to the University of Washington Professional and Continuing Education Python Certification gitHub Organization. In this space, you will find projects pertaining to the certification program:</p>
+        <p>The University of Washington department of Professional and
+           Continuing Education is proud to offer the 
+           <a href="http://www.pce.uw.edu/certificates/python-programming.html">
+           Certificate in Python Programming</a>. Here you will find basic 
+           information about the current offering and links to materials for 
+           each of the three courses.
+        </p>
 
-<p><a href="http://www.pce.uw.edu/certificates/python-programming.html">http://www.pce.uw.edu/certificates/python-programming.html</a></p>
+        <h3>Programming in Python</h3>
+        <p>Oct 1 - Dec 10, 2013</p>
+        <p>This course provides an introduction to the Python language.
+        Explore its most important libraries and practice recommended
+        programming styles and idioms. Learn through demonstration how the
+        various language features can be used together to best achieve
+        Pythonic style. This course it is not intended for absolute beginners
+        in programming, but includes a self-contained review of elementary
+        features.</p>
+
+        <h4>Topics include:</h4>
+
+        <ul>
+          <li>Variables, Expressions and Statements</li>
+          <li>Data Structures: Lists, Dictionaries, Tuples</li>
+          <li>Functions and Arguments</li>
+          <li>Conditionals and Recursion</li>
+          <li>Strings and Regular Expressions</li>
+          <li>Object Oriented Development: Classes, Inheritance</li>
+          <li>Iterators, Generators and Decorators</li>
+        </ul>
+        
+        <h4>Schedule Notes</h4>
+
+        <p>>No class on Nov 26.</p>
+        
+        <h3>Internet Programming in Python</h3>
+        <p>Jan 7 - Mar 11, 2014</p>
+        <p>This course emphasizes network-based programming and Web
+        applications, how they work and how to program them in Python. Explore
+        the underlying principles and their expression in the Python
+        libraries. Learn contrasting approaches in creating applications:
+        programming with the low-level libraries versus using highly
+        integrated frameworks.</p>
+
+        <h4>Topics include:</h4>
+
+        <ul>
+          <li>Foundational Technologies: sockets and the TCP/IP stack</li>
+          <li>Web Protocols: SMTP/IMAP/HTTP</li>
+          <li>Web Service APIs: XMLRPC, SOAP. REST</li>
+          <li>Request and Response: CGI and WSGI</li>
+          <li>Web Frameworks: Flask, Django, Pyramid</li>
+          <li>Related Technologies: Server Management and Deployment</li>
+        </ul>
+
+        <h3>System Development with Python</h3>
+        <p>Mar 25 - May 27, 2014</p>
+
+        <p>This course focuses on larger-scale application development.
+        Develop an understanding of the issues associated with larger software
+        projects. Complete a significant project of your choosing, and benefit
+        from in-class project work and direct instructor guidance. Explore
+        advanced Python programming topics.</p>
+
+        <h4>Topics include:</h4>
+
+        <ul>
+          <li>Advanced Object-Oriented Programming</li>
+          <li>Numerical Computation</li>
+          <li>Threading and Multiprocessing</li>
+          <li>Profiling and Performance Tuning</li>
+          <li>Unit Testing</li>
+          <li>Debugging</li>
+        </ul>
+
+        <p>Other possible topics according to student interest:
+        metaprogramming and decorators, databases and serialization, tasks and
+        concurrency, graphics and GUI programming, scientific and numerical
+        programming, embedding and integrating with other languages, etc.</p>
+
       </section>
     </div>
 
