--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </p>
 
         <h3>Programming in Python</h3>
-        <p>Oct 1 - Dec 10, 2013</p>
+        <p><em>Oct 1 - Dec 10, 2013</em></p>
         <p>This course provides an introduction to the Python language.
         Explore its most important libraries and practice recommended
         programming styles and idioms. Learn through demonstration how the
@@ -69,7 +69,7 @@
         <p>>No class on Nov 26.</p>
         
         <h3>Internet Programming in Python</h3>
-        <p>Jan 7 - Mar 11, 2014</p>
+        <p><em>Jan 7 - Mar 11, 2014</em></p>
         <p>This course emphasizes network-based programming and Web
         applications, how they work and how to program them in Python. Explore
         the underlying principles and their expression in the Python
@@ -89,7 +89,7 @@
         </ul>
 
         <h3>System Development with Python</h3>
-        <p>Mar 25 - May 27, 2014</p>
+        <p><em>Mar 25 - May 27, 2014</em></p>
 
         <p>This course focuses on larger-scale application development.
         Develop an understanding of the issues associated with larger software
