link UW PCE name

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
           Professional Python Training
         </h1>
 
-        <p>The University of Washington department of Professional and
-           Continuing Education is proud to offer the 
-           <a href="http://www.pce.uw.edu/certificates/python-programming.html">
-           Certificate in Python Programming</a>. Here you will find basic 
-           information about the current offering and links to materials for 
-           each of the three courses.
-        </p>
+        <p>The <a href="http://www.pce.uw.edu">University of Washington
+        department of Professional and Continuing Education</a> is proud to
+        offer the 
+        <a href="http://www.pce.uw.edu/certificates/python-programming.html">
+        Certificate in Python Programming</a>. Here you will find basic
+        information about the current offering and links to materials for each
+        of the three courses. </p>
 
         <h3>Programming in Python</h3>
         <p><em>Oct 1 - Dec 10, 2013</em></p>
