--- a/index.html
+++ b/index.html
@@ -87,6 +87,19 @@
           <li>Web Frameworks: Flask, Django, Pyramid</li>
           <li>Related Technologies: Server Management and Deployment</li>
         </ul>
+        
+        <h4>Course Outline and Presentations:</h4>
+        
+        <ul>
+          <li><a href="http://uwpce-pythoncert.github.io/training.python_web/">
+            Main Course Outline</a></li>
+          <li><a href="http://uwpce-pythoncert.github.io/training.python_web/presentations/session01.html">
+            Session 1 Presentation (Jan 7, 2013)</a></li>
+          <li><a href="http://uwpce-pythoncert.github.io/training.python_web/presentations/session02.html">
+            Session 2 Presentation (Jan 14, 2013)</a></li>
+          <li><a href="http://uwpce-pythoncert.github.io/training.python_web/presentations/session03.html">
+            Session 3 Presentation (Jan 21, 2013)</a></li>
+        </ul>
 
         <h3>System Development with Python</h3>
         <p><em>Mar 25 - May 27, 2014</em></p>
