links for week 4, presentation and plain html
add plain html link for week 3

--- a/index.html
+++ b/index.html
@@ -98,7 +98,12 @@
           <li><a href="http://uwpce-pythoncert.github.io/training.python_web/presentations/session02.html">
             Session 2 Presentation (Jan 14, 2014)</a></li>
           <li><a href="http://uwpce-pythoncert.github.io/training.python_web/presentations/session03.html">
-            Session 3 Presentation (Jan 21, 2014)</a></li>
+            Session 3 Presentation (Jan 21, 2014)</a>
+            <a href="http://uwpce-pythoncert.github.io/training.python_web/presentations/session03-plain.html">
+            (as plain html)</a></li>
+          <li><a href="http://uwpce-pythoncert.github.io/training.python_web/presentations/session04.html">
+            Session 4 Presentation (Jan 28, 2014)</a>
+            <a href="http://uwpce-pythoncert.github.io/training.python_web/presentations/session04.html">(as plain html)</a></li>
         </ul>
 
         <h3>System Development with Python</h3>
