add session 5 slide links and additional tutorials

--- a/index.html
+++ b/index.html
@@ -103,7 +103,18 @@
             (as plain html)</a></li>
           <li><a href="http://uwpce-pythoncert.github.io/training.python_web/presentations/session04.html">
             Session 4 Presentation (Jan 28, 2014)</a>
-            <a href="http://uwpce-pythoncert.github.io/training.python_web/presentations/session04-plain.html">(as plain html)</a></li>
+            <a href="http://uwpce-pythoncert.github.io/training.python_web/presentations/session04-plain.html">
+            (as plain html)</a></li>
+          <li><a href="training.python_web/presentations/session05.html">
+            Session 5 Presentation (Feb 4, 2014)</a>
+            <a href="training.python_web/presentations/session05-plain.html">
+            (as plain html)</a>
+            <ul>
+              <li><a href="training.python_web/presentations/template_tutorial-plain.html">Jinja2 Quick Tutorial</a></li>
+              <li><a href="training.python_web/presentations/sql_persistence_tutorial-plain.html">SQLite3 Quick Tutorial</a></li>
+              <li><a href="training.python_web/presentations/flask_walkthrough-plain.html">Flask Quick Walkthrough</a></li>
+            </ul>
+          </li>
         </ul>
 
         <h3>System Development with Python</h3>
