update the index to link session 6 slides and html

--- a/index.html
+++ b/index.html
@@ -115,6 +115,10 @@
               <li><a href="training.python_web/presentations/flask_walkthrough-plain.html">Flask Quick Walkthrough</a></li>
             </ul>
           </li>
+          <li><a href="training.python_web/presentations/session06.html">
+            Session 6 Presentation (Feb 11, 2014)</a>
+            <a href="training.python_web/presentations/session06-plain.html">
+            (as plain html)</a>
         </ul>
 
         <h3>System Development with Python</h3>
