--- a/index.html
+++ b/index.html
@@ -104,10 +104,6 @@
           <li><a href="http://uwpce-pythoncert.github.io/training.python_web/presentations/session04.html">
             Session 4 Presentation (Jan 28, 2014)</a>
             <a href="http://uwpce-pythoncert.github.io/training.python_web/presentations/session04-plain.html">
-            (as plain html)</a></li>
-          <li><a href="training.python_web/presentations/session05.html">
-            Session 5 Presentation (Feb 4, 2014)</a>
-            <a href="training.python_web/presentations/session05-plain.html">
             (as plain html)</a>
             <ul>
               <li><a href="training.python_web/presentations/template_tutorial-plain.html">Jinja2 Quick Tutorial</a></li>
@@ -115,10 +111,18 @@
               <li><a href="training.python_web/presentations/flask_walkthrough-plain.html">Flask Quick Walkthrough</a></li>
             </ul>
           </li>
+          <li><a href="training.python_web/presentations/session05.html">
+            Session 5 Presentation (Feb 4, 2014)</a>
+            <a href="training.python_web/presentations/session05-plain.html">
+            (as plain html)</a></li>
           <li><a href="training.python_web/presentations/session06.html">
             Session 6 Presentation (Feb 11, 2014)</a>
             <a href="training.python_web/presentations/session06-plain.html">
             (as plain html)</a>
+            <ul>
+              <li><a href="training.python_web/presentations/django_intro-lain.html">An Introduction to Django</a></li>
+            </ul>
+          </li>
         </ul>
 
         <h3>System Development with Python</h3>
