update to include session 7, session 8 and session 8 homework reading

--- a/index.html
+++ b/index.html
@@ -123,6 +123,16 @@
               <li><a href="training.python_web/presentations/django_intro-plain.html">An Introduction to Django</a></li>
             </ul>
           </li>
+          <li><a href="training.python_web/presentations/session07.html">
+            Session 7 Presentation</a>
+          </li>
+          <li><a href="training.python_web/presentations/session08.html">
+            Session 8 Presentation</a>
+            <ul>
+              <li><a href="https://github.com/UWPCE-PythonCert/training.python_web/blob/master/resources/common/zodb-install-instructions.rst">
+                Installing the ZODB</a></li>
+            </ul>
+          </li>
         </ul>
 
         <h3>System Development with Python</h3>
