--- a/index.html
+++ b/index.html
@@ -133,6 +133,10 @@
                 Installing the ZODB</a></li>
             </ul>
           </li>
+          <li><a href="training.python_web/presentations/session09.html">
+            Session 9 Presentation (March 4, 2014)</a></li>
+          <li><a href="training.python_web/presentations/session10.html">
+            Session 10 Presentation (March 11, 2014)</a></li>
         </ul>
 
         <h3>System Development with Python</h3>
