add plain html versions for the last four lectures

--- a/index.html
+++ b/index.html
@@ -125,18 +125,26 @@
           </li>
           <li><a href="training.python_web/presentations/session07.html">
             Session 7 Presentation</a>
+            <a href="http://uwpce-pythoncert.github.io/training.python_web/presentations/session07-plain.html">
+            (as plain html)</a>
           </li>
           <li><a href="training.python_web/presentations/session08.html">
             Session 8 Presentation</a>
+            <a href="http://uwpce-pythoncert.github.io/training.python_web/presentations/session08-plain.html">
+            (as plain html)</a>
             <ul>
               <li><a href="https://github.com/UWPCE-PythonCert/training.python_web/blob/master/resources/common/zodb-install-instructions.rst">
                 Installing the ZODB</a></li>
             </ul>
           </li>
           <li><a href="training.python_web/presentations/session09.html">
-            Session 9 Presentation (March 4, 2014)</a></li>
+            Session 9 Presentation (March 4, 2014)</a>
+            <a href="http://uwpce-pythoncert.github.io/training.python_web/presentations/session09-plain.html">
+            (as plain html)</a></li>
           <li><a href="training.python_web/presentations/session10.html">
-            Session 10 Presentation (March 11, 2014)</a></li>
+            Session 10 Presentation (March 11, 2014)</a>
+            <a href="http://uwpce-pythoncert.github.io/training.python_web/presentations/session10-plain.html">
+            (as plain html)</a></li>
         </ul>
 
         <h3>System Development with Python</h3>
