--- a/index.html
+++ b/index.html
@@ -91,18 +91,19 @@
         <h4>Course Outline and Presentations:</h4>
         
         <ul>
-          <li><a href="http://uwpce-pythoncert.github.io/training.python_web/">
+          <li><a href="http://uwpce-pythoncert.github.io/training.python_web/html/">
             Main Course Outline</a></li>
-          <li><a href="http://uwpce-pythoncert.github.io/training.python_web/presentations/session01.html">
-            Session 1 Presentation (Jan 7, 2014)</a></li>
+          <li><a href="http://uwpce-pythoncert.github.io/training.python_web/html/presentations/session01.html">
+            Session 1 Presentation (Jan 6, 2015)</a></li>
+          <!--
           <li><a href="http://uwpce-pythoncert.github.io/training.python_web/presentations/session02.html">
-            Session 2 Presentation (Jan 14, 2014)</a></li>
+            Session 2 Presentation (Jan 13, 2014)</a></li>
           <li><a href="http://uwpce-pythoncert.github.io/training.python_web/presentations/session03.html">
-            Session 3 Presentation (Jan 21, 2014)</a>
+            Session 3 Presentation (Jan 20, 2014)</a>
             <a href="http://uwpce-pythoncert.github.io/training.python_web/presentations/session03-plain.html">
             (as plain html)</a></li>
           <li><a href="http://uwpce-pythoncert.github.io/training.python_web/presentations/session04.html">
-            Session 4 Presentation (Jan 28, 2014)</a>
+            Session 4 Presentation (Jan 27, 2014)</a>
             <a href="http://uwpce-pythoncert.github.io/training.python_web/presentations/session04-plain.html">
             (as plain html)</a>
             <ul>
@@ -112,11 +113,11 @@
             </ul>
           </li>
           <li><a href="training.python_web/presentations/session05.html">
-            Session 5 Presentation (Feb 4, 2014)</a>
+            Session 5 Presentation (Feb 3, 2014)</a>
             <a href="training.python_web/presentations/session05-plain.html">
             (as plain html)</a></li>
           <li><a href="training.python_web/presentations/session06.html">
-            Session 6 Presentation (Feb 11, 2014)</a>
+            Session 6 Presentation (Feb 10, 2014)</a>
             <a href="training.python_web/presentations/session06-plain.html">
             (as plain html)</a>
             <ul>
@@ -138,13 +139,14 @@
             </ul>
           </li>
           <li><a href="training.python_web/presentations/session09.html">
-            Session 9 Presentation (March 4, 2014)</a>
+            Session 9 Presentation (March 3, 2014)</a>
             <a href="http://uwpce-pythoncert.github.io/training.python_web/presentations/session09-plain.html">
             (as plain html)</a></li>
           <li><a href="training.python_web/presentations/session10.html">
-            Session 10 Presentation (March 11, 2014)</a>
+            Session 10 Presentation (March 10, 2014)</a>
             <a href="http://uwpce-pythoncert.github.io/training.python_web/presentations/session10-plain.html">
             (as plain html)</a></li>
+            -->
         </ul>
 
         <h3>System Development with Python</h3>
