omit 1st and 3rd courses to increase clarity and visibility

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
         information about the current offering and links to materials for each
         of the three courses. </p>
 
+        <!--
+
         <h3>Programming in Python</h3>
         <p><em>Oct 1 - Dec 10, 2013</em></p>
         <p>This course provides an introduction to the Python language.
@@ -66,10 +68,10 @@
         
         <h4>Schedule Notes</h4>
 
-        <p>>No class on Nov 26.</p>
+        <p>>No class on Nov 26.</p> -->
         
         <h3>Internet Programming in Python</h3>
-        <p><em>Jan 7 - Mar 11, 2014</em></p>
+        <p><em>Jan 6 - Mar 10, 2014</em></p>
         <p>This course emphasizes network-based programming and Web
         applications, how they work and how to program them in Python. Explore
         the underlying principles and their expression in the Python
@@ -149,6 +151,8 @@
             -->
         </ul>
 
+        <!--
+
         <h3>System Development with Python</h3>
         <p><em>Mar 25 - May 27, 2014</em></p>
 
@@ -173,6 +177,8 @@
         metaprogramming and decorators, databases and serialization, tasks and
         concurrency, graphics and GUI programming, scientific and numerical
         programming, embedding and integrating with other languages, etc.</p>
+
+        -->
 
       </section>
     </div>
