--- a/index.html
+++ b/index.html
@@ -94,9 +94,16 @@
         
         <ul>
           <li><a href="http://uwpce-pythoncert.github.io/training.python_web/html/">
-            Main Course Outline</a></li>
-          <li><a href="http://uwpce-pythoncert.github.io/training.python_web/html/presentations/session01.html">
-            Session 1 Presentation (Jan 6, 2015)</a></li>
+            Main Course Documentation</a></li>
+          <li><a href="http://uwpce-pythoncert.github.io/training.python_web/html/outline.html">
+            Course Outline</a></li>
+          <li>
+            Course Sessions
+            <ul>
+              <li><a href="http://uwpce-pythoncert.github.io/training.python_web/html/presentations/session01.html">
+                Session 1 Presentation (Jan 6, 2015)</a></li>
+            </ul>
+          </li>
           <!--
           <li><a href="http://uwpce-pythoncert.github.io/training.python_web/presentations/session02.html">
             Session 2 Presentation (Jan 13, 2014)</a></li>
