remove reference to flask, won't be teaching it

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <li>Web Protocols: SMTP/IMAP/HTTP</li>
           <li>Web Service APIs: XMLRPC, SOAP. REST</li>
           <li>Request and Response: CGI and WSGI</li>
-          <li>Web Frameworks: Flask, Django, Pyramid</li>
+          <li>Web Frameworks: Django, Pyramid</li>
           <li>Related Technologies: Server Management and Deployment</li>
         </ul>
         
