buckle in session 6

--- a/index.html
+++ b/index.html
@@ -103,13 +103,15 @@
               <li><a href="http://uwpce-pythoncert.github.io/training.python_web/html/presentations/session01.html">
                 Session 1 Presentation (Jan 6, 2015)</a></li>
               <li><a href="http://uwpce-pythoncert.github.io/training.python_web/html/presentations/session02.html">
-                Session 2 Presentation (Jan 13, 2014)</a></li>
+                Session 2 Presentation (Jan 13, 2015)</a></li>
               <li><a href="http://uwpce-pythoncert.github.io/training.python_web/html/presentations/session03.html">
-                Session 3 Presentation (Jan 20, 2014)</a>
+                Session 3 Presentation (Jan 20, 2015)</a>
               <li><a href="http://uwpce-pythoncert.github.io/training.python_web/html/presentations/session04.html">
-                Session 4 Presentation (Jan 27, 2014)</a></li>
+                Session 4 Presentation (Jan 27, 2015)</a></li>
               <li><a href="http://uwpce-pythoncert.github.io/training.python_web/html/presentations/session05.html">
-                Session 5 Presentation (Feb 3, 2014)</a></li>
+                Session 5 Presentation (Feb 3, 2015)</a></li>
+              <li><a href="http://uwpce-pythoncert.github.io/training.python_web/html/presentations/session06.html">
+                Session 6 Presentation (Feb 10, 2015)</a></li>
             </ul>
           </li>
           <!--
