buckling sessions 7-9 into the outline

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
             Main Course Documentation</a></li>
           <li><a href="http://uwpce-pythoncert.github.io/training.python_web/html/outline.html">
             Course Outline</a></li>
-          <li>
-            Course Sessions
+          <li><a href="http://uwpce-pythoncert.github.io/training.python_web/html/presentations/index.html">
+            Course Sessions</a>
             <ul>
               <li><a href="http://uwpce-pythoncert.github.io/training.python_web/html/presentations/session01.html">
                 Session 1 Presentation (Jan 6, 2015)</a></li>
@@ -112,40 +112,14 @@
                 Session 5 Presentation (Feb 3, 2015)</a></li>
               <li><a href="http://uwpce-pythoncert.github.io/training.python_web/html/presentations/session06.html">
                 Session 6 Presentation (Feb 10, 2015)</a></li>
+              <li><a href="http://uwpce-pythoncert.github.io/training.python_web/html/presentations/session07.html">
+                Session 7 Presentation (Feb 17, 2015)</a></li>
+              <li><a href="http://uwpce-pythoncert.github.io/training.python_web/html/presentations/session08.html">
+                Session 8 Presentation (Feb 24, 2015)</a></li>
+              <li><a href="http://uwpce-pythoncert.github.io/training.python_web/html/presentations/session09.html">
+                Session 9 Presentation (Mar 3, 2015)</a></li>
             </ul>
           </li>
-          <!--
-          <li><a href="training.python_web/presentations/session06.html">
-            Session 6 Presentation (Feb 10, 2014)</a>
-            <a href="training.python_web/presentations/session06-plain.html">
-            (as plain html)</a>
-            <ul>
-              <li><a href="training.python_web/presentations/django_intro-plain.html">An Introduction to Django</a></li>
-            </ul>
-          </li>
-          <li><a href="training.python_web/presentations/session07.html">
-            Session 7 Presentation</a>
-            <a href="http://uwpce-pythoncert.github.io/training.python_web/presentations/session07-plain.html">
-            (as plain html)</a>
-          </li>
-          <li><a href="training.python_web/presentations/session08.html">
-            Session 8 Presentation</a>
-            <a href="http://uwpce-pythoncert.github.io/training.python_web/presentations/session08-plain.html">
-            (as plain html)</a>
-            <ul>
-              <li><a href="https://github.com/UWPCE-PythonCert/training.python_web/blob/master/resources/common/zodb-install-instructions.rst">
-                Installing the ZODB</a></li>
-            </ul>
-          </li>
-          <li><a href="training.python_web/presentations/session09.html">
-            Session 9 Presentation (March 3, 2014)</a>
-            <a href="http://uwpce-pythoncert.github.io/training.python_web/presentations/session09-plain.html">
-            (as plain html)</a></li>
-          <li><a href="training.python_web/presentations/session10.html">
-            Session 10 Presentation (March 10, 2014)</a>
-            <a href="http://uwpce-pythoncert.github.io/training.python_web/presentations/session10-plain.html">
-            (as plain html)</a></li>
-            -->
         </ul>
 
         <!--
